# cwg

./: .gitignore  Makefile  README.md  init-players.sh  init.sh  players-only.sh  rules.cfg
documentation/: rules.txt  startup.sh
dou/: Consoden.TankGame.GameState.dou  Consoden.TankGame.Match.dou  Consoden.TankGame.Tank.dou
game_boards/: board0.txt  board1.txt  board2.txt  board3.txt  board4.txt  board5.txt  board6.txt  board7.txt  board8.txt  board9.txt  bug_2014-12-16.15:50:28.txt
src/: CMakeLists.txt  Config.cpp  Config.h  rules.cfg
src/players/tank_kamikaze_player/src/: CMakeLists.txt
src/players/tank_kamikaze_player/src/tank_kamikaze_player/: App.cpp  App.h  GameMap.cpp  GameMap.h  GameStateHandler.cpp  GameStateHandler.h  JoystickEntityHandler.cpp  JoystickEntityHandler.h  PlayerEntityHandler.cpp  PlayerEntityHandler.h  PlayerEntityHandlerGameStateHandlerIF.h  main.cpp
src/players/tank_player_dumb/src/: GameMap.cpp  Player.cpp  Player.h  TankLogic.cpp  TankLogic.h  main.cpp  tank_player_cpp  tank_player_dumb
src/players/tank_player_grandmother/src/: .gitignore  Player.cpp  Player.h  TankLogic.cpp  TankLogic.h  main.cpp
src/players/tank_player_manual/src/: BfsHelper.cpp  BfsHelper.h  CMakeLists.txt  GameMap.h  Player.cpp  Player.h  TankLogic.cpp  TankLogic.h  main.cpp
src/players/tank_player_powerup/src/: BfsHelper.cpp  BfsHelper.h  CMakeLists.txt  GameMap.cpp  GameMap.h  TankLogic.cpp
src/players/tank_player_templates/tank_player_cpp/src/: BfsHelper.cpp  BfsHelper.h  CMakeLists.txt  GameMap.cpp  GameMap.h  Player.cpp  Player.h  TankLogic.cpp  TankLogic.h  tank_player_cpp
src/players/tank_player_templates/tank_player_cs/src/: AssemblyInfo.cs  Bfs.cs  CMakeLists.txt  GameMap.cs  Player.cs  TankLogic.cs  tank_player_cs.csproj
src/players/tank_player_templates/tank_player_java/src/: CMakeLists.txt  Manifest.txt
src/players/tank_player_templates/tank_player_java/src/cwg/: Bfs.java  GameMap.java  Player.java  Position.java  TankLogic.java
src/players/tank_random_player/src/: CMakeLists.txt
src/players/tank_random_player/src/tank_random_player/: App.cpp  App.h  CMakeLists.txt  GameStateHandler.cpp  GameStateHandler.h  JoystickEntityHandler.cpp  PlayerEntityHandler.cpp  PlayerEntityHandlerGameStateHandlerIF.h  main.cpp  tank_random_player
src/players/tank_sample/src/: CMakeLists.txt  TankLogic.cpp  TankLogic.h
src/players/tank_team_player/src/: CMakeLists.txt
src/players/tank_team_player/src/tank_team_player/: App.cpp  App.h  CMakeLists.txt  GameMap.cpp  GameMap.h  GameStateHandler.cpp  GameStateHandler.h  JoystickEntityHandler.cpp  JoystickEntityHandler.h  PlayerEntityHandler.cpp  PlayerEntityHandler.h  Strategy.cpp  Strategy.h  StrategyJoystickEntityHandlerIF.h  main.cpp
src/tank_engine/src/: App.cpp  CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h  GameMap.cpp  GameMap.h
src/tank_engine/src/tank_engine/: CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h  GameMap.cpp  GameMap.h  main.cpp  tank_engine
src/tank_game_gui/images/laser/: animation long.xcf  animation template.xcf  laser_ammo_template.xcf
src/tank_game_gui/src/: CMakeLists.txt  PassiveGroup.cpp  PassiveGroup.h  application.qrc  boardparser.cpp  boardparser.h  gamemodel.cpp  gamemodel.h  gameworld.cpp  gameworld.h  main.cpp  mainwindow.cpp  mainwindow.h  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  qrc_application.cpp  screentext.h  sprite.h  tank_game_gui  tankgamewidget.cpp  tankgamewidget.h  tankinfowidget.cpp  tankinfowidget.h  tankinfowidget.ui
src/tank_joy_player/src/: CMakeLists.txt
src/tank_joy_player/src/tank_joy_player/: App.cpp  CMakeLists.txt  GameStateHandler.h  KeyboardReader.cpp  PlayerEntityHandler.cpp  PlayerEntityHandlerGameStateHandlerIF.h
src/tank_match_server/src/: BoardHandler.cpp  BoardHandler.h  CMakeLists.txt  MatchStateMachine.cpp  MatchStateMachine.h  main.cpp  tank_match_server
tank_dou/: Consoden.TankGame.Boards.dou  Consoden.TankGame.Configuration.dou  Consoden.TankGame.Direction.dou  Consoden.TankGame.Dude.dou  Consoden.TankGame.GameState.dou  Consoden.TankGame.Joystick.dou  Consoden.TankGame.Missile.dou  Consoden.TankGame.Player.dou  Consoden.TankGame.Redeemer.dou  Consoden.TankGame.Tank.dou  Consoden.TankGame.Winner.dou
tank_engine/src/: CMakeLists.txt
tank_engine/src/tank_engine/: App.cpp  App.h  CMakeLists.txt  Engine.cpp  Engine.h  EntityHandler.cpp  EntityHandler.h  GameMap.cpp  GameMap.h  JoystickEngineIF.h  JoystickEntityHandler.cpp  JoystickEntityHandler.h  main.cpp
tank_game_gui/src/: application.qrc  boardparser.cpp  boardparser.h  gamemodel.h  gameworld.cpp  gameworld.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  sprite.h  tankgamewidget.cpp  tankgamewidget.h  tankinfowidget.cpp  tankinfowidget.h  tankinfowidget.ui
tank_joy_player/src/tank_joy_player/: App.h  GameStateHandler.cpp  JoystickEntityHandler.cpp  JoystickEntityHandler.h  KeyboardReader.h  PlayerEntityHandler.h  main.cpp
tank_kamikaze_player/src/tank_kamikaze_player/: CMakeLists.txt
tank_match_server/src/: BoardHandler.cpp  BoardHandler.h  MatchServer.cpp  MatchServer.h  MatchStateMachine.cpp  MatchStateMachine.h  main.cpp
tank_player_dumb/src/: BfsHelper.cpp  CMakeLists.txt
tank_player_grandmother/src/: CMakeLists.txt  GameMap.cpp  TankLogic.cpp  TankLogic.h
tank_player_templates/tank_player_cpp/src/: BfsHelper.cpp  BfsHelper.h  GameMap.cpp  GameMap.h  Player.cpp  Player.h  TankLogic.cpp  TankLogic.h  main.cpp  tank_player_cpp
tank_player_templates/tank_player_cs/src/: Bfs.cs  GameMap.cs  Player.cs  Position.cs  TankLogic.cs  tank_player_cs.csproj
tank_player_templates/tank_player_java/src/: CMakeLists.txt
tank_player_templates/tank_player_java/src/cwg/: Bfs.java  GameMap.java  Player.java  Position.java  TankLogic.java
tank_player_templates/tank_player_java/src/cwg14/: GameMap.java  Player.java  TankLogic.java
tank_random_player/src/tank_random_player/: JoystickEntityHandler.cpp  JoystickEntityHandler.h  PlayerEntityHandler.h
(+1 files in other folders)
